--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <button class="search-button">Search</button> 
     </div>
 
+    <div class="history-info" id="history-list"></div>
+
     <div class="country-info"></div>
 
     <script type="module" src="main.js"></script>
