feat: did the favorites functionality and added a navbar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
         <button class="search-button">Search</button> 
     </div>
 
-    <div class="history-info" id="history-list"></div>
+    <div class="nav-container">
+        <button id="history-button" class="history-button">
+            History
+            <img src="assets/images/history.png" alt="history" width="20" height="20">
+        </button>
+        <button id="favorites-button" class="favorites-button">
+            Favorites
+            <img src="assets/images/favorites.png" alt="star" width="20" height="20">
+        </button>
+    </div>
+    
+    <div class="history-info" id="countries-bubbles-list"></div>
 
     <div class="country-info"></div>
 
